--- a/photography.html
+++ b/photography.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -44,36 +43,44 @@
 						<div class="inner">
 							<h1>Street Photography</h1>
 							<!-- Carousel -->
-              <div class="carousel">
-                <a class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></a>
-                <a class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></a>
+							<div class="carousel">
+                <div class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></div>
+								<div class="carousel-item" href="#three!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#four!"><img src="images/designTN.png"></div>
               </div>
               <!-- End Carousel -->
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 
 							<h1>Product Photography</h1>
 							<!-- Carousel -->
-              <div class="carousel">
-                <a class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></a>
-                <a class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></a>
+							<div class="carousel">
+                <div class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></div>
+								<div class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#two!"><img src="images/designTN.png"></div>
               </div>
               <!-- End Carousel -->
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 
 							<h1>Portrait Photography</h1>
 							<!-- Carousel -->
-              <div class="carousel">
-                <a class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></a>
-                <a class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></a>
+							<div class="carousel">
+                <div class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></div>
+								<div class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#two!"><img src="images/designTN.png"></div>
               </div>
               <!-- End Carousel -->
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 
 							<h1>Landscape Photography</h1>
 							<!-- Carousel -->
-              <div class="carousel">
-                <a class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></a>
-                <a class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></a>
+							<div class="carousel">
+                <div class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#two!"><img src="images/austinProduct1.png"></div>
+								<div class="carousel-item" href="#one!"><img src="images/austinStreet2.png"></div>
+                <div class="carousel-item" href="#two!"><img src="images/designTN.png"></div>
               </div>
               <!-- End Carousel -->
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
@@ -120,5 +127,10 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
       <script src="assets/js/carousel.js"></script>
+
+			<!-- Slick Carousel dependencies -->
+			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
+			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"/>
+	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 	</body>
 </html>
