--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -33,9 +34,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Photography</a></li>
-							<li><a href="generic.html">Video</a></li>
-							<li><a href="generic.html">Design</a></li>
+							<li><a href="photography.html">Photography</a></li>
+							<li><a href="videos.html">Video</a></li>
+							<li><a href="design.html">Design</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
