Footer File Upload Update

--- a/index.html
+++ b/index.html
@@ -1,137 +1,144 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Austin Aubry</title>
-		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+<head>
+	<title>Austin Aubry</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+<body class="is-preload">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-						</div>
-					</header>
+		<!-- Header -->
+		<header id="header">
+			<div class="inner">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="photography.html">Photography</a></li>
-							<li><a href="videos.html">Video</a></li>
-							<li><a href="design.html">Design</a></li>
-							<li><a href="about.html">About</a></li>
-						</ul>
-					</nav>
+				<!-- Nav -->
+				<nav>
+					<ul>
+						<li><a href="#menu">Menu</a></li>
+					</ul>
+				</nav>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<!-- Logo -->
-									<a href="index.html" class="logo">
-										<span class="symbol"><img src="images/austinLogo.png" alt="" /></span>
-									</a>
-								<h1>Austin Aubry<br />
-								</h1>
-								<p>Photographer, Video Producer, and Designer based out of Salt Lake City, Utah.</p>
-							</header>
-							<section class="tiles">
-								<article class="style3">
-									<span class="image">
-										<img src="images/austinPortrait1.png" alt="" />
-									</span>
-									<a href="photography.html">
-										<h2>Photography</h2>
-										<div class="content">
-											<p>A series of different photography styles.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/videoTN.png" class="videoTN" alt="" />
-									</span>
-									<a href="videos.html">
-										<h2>Video</h2>
-										<div class="content">
-											<p>Videos produced and shot by me.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/designTN.png" alt="" />
-									</span>
-									<a href="design.html">
-										<h2>Design</h2>
-										<div class="content">
-											<p>Design ideas and portfolio.</p>
-										</div>
-									</a>
-								</article>
-							</section>
-						</div>
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2 class="getintouch">Get in touch</h2>
-								<form action="POST" data-netlify="true">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-										<div class="field">
-											<input type="file" name="myFile" id="myFile" placeholder="Upload file">
-										</div>
-										<div class="field">
-											<div data-netlify-recaptcha="true"></div>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2 class="follow">Follow</h2>
-								<ul class="icons">
-									<li><a href="https://www.instagram.com/austinaubry/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://www.linkedin.com/in/austin-aubry/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								</ul>
-							</section>
-						</div>
-					</footer>
 			</div>
+		</header>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-	</body>
+		<!-- Menu -->
+		<nav id="menu">
+			<h2>Menu</h2>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="photography.html">Photography</a></li>
+				<li><a href="videos.html">Video</a></li>
+				<li><a href="design.html">Design</a></li>
+				<li><a href="about.html">About</a></li>
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
+				<header>
+					<!-- Logo -->
+					<a href="index.html" class="logo">
+						<span class="symbol"><img src="images/austinLogo.png" alt="" /></span>
+					</a>
+					<h1>Austin Aubry<br />
+					</h1>
+					<p>Photographer, Video Producer, and Designer based out of Salt Lake City, Utah.</p>
+				</header>
+				<section class="tiles">
+					<article class="style3">
+						<span class="image">
+							<img src="images/austinPortrait1.png" alt="" />
+						</span>
+						<a href="photography.html">
+							<h2>Photography</h2>
+							<div class="content">
+								<p>A series of different photography styles.</p>
+							</div>
+						</a>
+					</article>
+					<article class="style5">
+						<span class="image">
+							<img src="images/videoTN.png" class="videoTN" alt="" />
+						</span>
+						<a href="videos.html">
+							<h2>Video</h2>
+							<div class="content">
+								<p>Videos produced and shot by me.</p>
+							</div>
+						</a>
+					</article>
+					<article class="style6">
+						<span class="image">
+							<img src="images/designTN.png" alt="" />
+						</span>
+						<a href="design.html">
+							<h2>Design</h2>
+							<div class="content">
+								<p>Design ideas and portfolio.</p>
+							</div>
+						</a>
+					</article>
+				</section>
+			</div>
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<section>
+					<h2 class="getintouch">Get in touch</h2>
+					<form action="POST" data-netlify="true">
+						<div class="fields">
+							<div class="field half">
+								<input type="text" name="name" id="name" placeholder="Name" />
+							</div>
+							<div class="field half">
+								<input type="email" name="email" id="email" placeholder="Email" />
+							</div>
+							<div class="field">
+								<textarea name="message" id="message" placeholder="Message"></textarea>
+							</div>
+							<div class="field">
+								<label for="file-upload" class="custom-file-upload">
+									<i class="fa fa-cloud-upload"></i> File Upload
+								</label>
+								<input id="file-upload" type="file" />
+							</div>
+							<div class="field">
+								<div data-netlify-recaptcha="true"></div>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><input type="submit" value="Send" class="primary" /></li>
+						</ul>
+					</form>
+				</section>
+				<section>
+					<h2 class="follow">Follow</h2>
+					<ul class="icons">
+						<li><a href="https://www.instagram.com/austinaubry/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.linkedin.com/in/austin-aubry/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					</ul>
+				</section>
+			</div>
+		</footer>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+</body>
+
 </html>
